--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdk 23
         targetSdk 32
         versionCode 1
-        versionName "1.2.3" //TODO You shouldn't put 'v-' in the first of version number. This string compare with file name of latest version on the server!
+        versionName "1.2.4" //TODO You shouldn't put 'v-' in the first of version number. This string compare with file name of latest version on the server!
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
+    implementation 'androidx.annotation:annotation:1.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
