--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.ifpstaff"
+        applicationId 'ir.iranfilmport.ifpstaff'
         minSdk 23
         targetSdk 32
         versionCode 1
