--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,19 +20,19 @@
         android:theme="@style/Theme.IFPSTAFF"
         tools:replace="android:label">
         <activity
-            android:name=".ActivityLogin"
+            android:name="com.example.ifpstaff.ActivityLogin"
             android:exported="false"
             android:label="Try Your Chance!" />
         <activity
-            android:name=".ActivityCalendar"
+            android:name="com.example.ifpstaff.ActivityCalendar"
             android:exported="false" /> <!-- If there is no the below code, after ActivitySplash, the MainActivty will not be opened -->
-        <activity android:name=".MainActivity" />
+        <activity android:name="com.example.ifpstaff.MainActivity" />
         <!--
  if no there this command: [android:theme="@style/Theme.AppCompat.Light.NoActionBar], splashActivity following
         themes.xml (light/night) theme! and in they, there is ActionBar, that it is a pretty ugly!
         -->
         <activity
-            android:name=".ActivitySplash"
+            android:name="com.example.ifpstaff.ActivitySplash"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
