--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdk 23
         targetSdk 32
         versionCode 1
-        versionName "1.2.5" //TODO You shouldn't put 'v-' in the first of version number. This string compare with file name of latest version on the server!
+        versionName "1.2.7" //TODO You shouldn't put 'v-' in the first of version number. This string compare with file name of latest version on the server!
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,22 +38,22 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
-    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //Navigation Fragment
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     //Navigation Drawer
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'com.google.android.material:material:1.6.1'
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
     // LiveData
@@ -67,6 +67,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     // Shamsi Date (samanzamani)
     implementation 'com.github.samanzamani.persiandate:PersianDate:0.0.2'
+    //Google-Play
+    implementation 'com.google.android.play:core:1.10.3'
 
 
 }
